Delete Everything/First redirect

--- a/Version 4/index.html
+++ b/Version 4/index.html
@@ -1,439 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 
-  <head>
+    <!--Google Tracking-->
+    <!--
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122724690-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="An aspiring Web Developer, looking to build a modern future!">
-    <meta name="author" content="Brayan Quevedo Ramos">
+    gtag('config', 'UA-122724690-1');
+    </script>
+    -->
 
-    <title>Brayan Quevedo Ramos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--meta http-equiv="refresh" content="0; url=public_html/index.html" />
+    <title>Brayan Quevedo - Redirection</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <!--Bootstrap 4.1.2 CDN-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="main.css">
 
-    <!-- Custom styles-->
-    <link href="css/resume.css" rel="stylesheet">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-  </head>
+</head>
+<body>
 
-  <body id="page-top">
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Brayan Quevedo Ramos.</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile/profile-picture-1.jpg" alt="Profile Picture">
-        </span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="container-fluid p-0" id="main_head">
-
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
-          <h1 class="mb-0">Brayan Quevedo Ramos.
-          </h1>
-          <div class="subheading mb-5">
-            <a href="mailto:brayanquevedo2134@gmail.com">Brayanquevedo2134@gmail.com</a>
-          </div>
-          <p class="mb-5">
-            Hello there,
-            My name's Brayan!
-            I'm an aspiring Software Developer,
-            with an emphasis on Web Development on the side for fun.
-            I hope to build a modern web/software infrastructure that looks clean,
-            AND professional!
-          </p>
-          <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/brayan.quevedo.98">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.instagram.com/brayan2134/?hl=en">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://twitter.com/brayanq44997157">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/Brayan2134">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h2>
+                    Redirecting you to the site!
+                </h2>
+                <hr>
+                <h2>Hold on tight!
+                    You should be there super shortly!
+                </h2>
+            </div>
         </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-        <div class="my-auto">
-          <h2 class="mb-5">Experience.</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer.</h3>
-              <div class="subheading mb-3">Berry Smooth</div>
-              <p>
-                I was a Senior Software Developer for a startup named
-                'Berry Smooth'.
-                I was in charge of the creation,
-                maintenance,
-                and UX of the website,
-                so potential customers can get
-                the needed information
-                in a quick and efficient manner. <br>
-                <a href="http://berrysmooth.dx.am/">
-                The finished product can be viewed here.
-                </a>
-              </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">March 2018 - Current</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer.</h3>
-              <div class="subheading mb-3">D&H</div>
-              <p>
-                A client approached me one day and requested a specific website for an established company.
-                As this was a side project, I didn't have my full attention on it,
-                but decided to 'modernize'
-                the current website.
-                My goals for this project were simple.
-                Provide a easy viewing experience, with a Mobile-First
-                powered website, with the help of Twitter Bootstrap.
-                <a href="http://d-h.000webhostapp.com/">
-                The finished product can be viewed here.
-                </a>
-              </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">May 2018 - July 2018</span>
-            </div>
-          </div>
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer.</h3>
-              <div class="subheading mb-3">AccessoryWcs</div>
-              <p>
-                This is a website created for a business.
-                The business was about repairing and educating phone users.
-                The goals that were presented in making the website were as followed;
-                Make a clean website, add only relevant information,
-                and make it mobile friendly (with Twitter Bootstrap). <br>
-                <a href="http://accessorywcs.000webhostapp.com/">
-                The finished product can be viewed here.</a>
-              </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2018</span>
-            </div>
-          </div>
-          <h2 class="mb-5">
-            Non Web Development Experience.
-          </h2>
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Cashier.</h3>
-              <div class="subheading mb-3">Berry Smooth</div>
-              <p>
-                If you don't know what a cashier is,
-                it's a position in which I take orders and handle the money.
-                That would be about it in most companies,
-                but at Berry Smooth, I decided to take it one step further!
-                Of course, I didn't have to,
-                but who likes just standing there, watching 
-                their co-workers struggle making orders?
-                I didn't, so
-                whenever possible, I took orders, made the orders,
-                <b>AND</b>
-                washed the dishes! 
-              </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2018 - Current </span>
-            </div>
-          </div>
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Field Worker.</h3>
-              <div class="subheading mb-3">Coria Estates</div>
-              <p>
-                I've always wanted to know how agriculture was like.
-                I always pass by fields on my way to somewhere,
-                and when I saw grapes on sale at a local store,
-                I wanted to know how the process worked like.
-                Well, last summer I did work in agriculture!
-                I raised wire,
-                raised the vines,
-                cut/trim,
-                and pick the grapes!
-                I never liked working there,
-                but it was a learning experience for me.
-                The lesson taught there was that if I don't want to finish high school,
-                or do anything in life, i'd end up here.
-                This job has been my motivation to pursue Software/Web Development
-                since I don't want to end up like this! 
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
-          <h2 class="mb-5">Education.</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Sprague High School</h3>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.875</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2017 - June 2021</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Judson Middle School</h3>
-              <p>GPA: 3.66</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2014 - June 2017</span>
-            </div>
-          </div>
-
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
-          <h2 class="mb-5">Skills.</h2>
-
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Quick Communication &amp; Project Drafting</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Address Arsing Issues</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests.</h2>
-          <p>
-            Aside from Software/Web Development
-            located in Oregon,
-            I also like to take part in other leisure activities.
-            Aside from helping other aspiring developers, like myself,
-            on forums like Stackoverflow,
-            I like to help others out in their paths to greatness,
-            along with doing activities that involve person to person communication.
-          </p>
-          <p class="mb-0">
-            During any other season that's not Summer,
-            school's in session.
-            I like to help other peers that struggle with class topics,
-            and make sure that everyone I know can get far in life.
-            I motivate everyone with a positive attitude,
-            so that in the event that the peer is having a bad day,
-            they can smile and hopefully,
-            make their day just a little bit better!
-          </p>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="pricing">
-        <div class="my-auto">
-          <h2 class="mb-5">Pricing.</h2>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <h2 class="text-center">
-                Personal.
-              </h2>
-              <h2 id="askprice">
-                $129
-              </h2>
-              <p class="text-muted text-center">
-                Billed Once Complete.
-              </p>
-              <hr>
-              <h3 class="text-center">
-                About This Plan.
-              </h3>
-              <p>
-                This is a perfect plan for anyone who just
-                needs a web presence.
-                You'll get a 1-3 page webpage,
-                with color schemes of your choosing!
-                Although development may not be my #1 priority,
-                you shall receive the completed website (with anything requested),
-                within 2 weeks from the date of agreement.
-              </p>
-              <hr>
-              <h3 class="text-center">
-                Hosting.
-              </h3>
-              <p class="lead text-center">
-                $0 - Self Hosting. <br>
-                $0 - Webhost. <br>
-                $2.99 - Awardspace. <br>
-                <b>WON'T BUY CUSTOM DOMAINS</b>
-              </p>
-              <hr>
-              <h3 class="text-center">
-                Future Development.
-              </h3>
-              <p>
-                Future development is
-                <i>not available.</i> <br>
-                Any minor changes (like moving divs and such)
-                are free.
-              </p>
-            </div>
-            <div class="col-lg-6">
-              <h2 class="text-center">
-                Company.
-              </h2>
-              <h2 id="askprice">
-                $259
-              </h2>
-              <p class="text-muted text-center">
-                Billed Once Complete.
-              </p>
-              <hr>
-              <h3 class="text-center">
-                About This Plan.
-              </h3>
-              <p>
-                This is an all around amazing plan for all of your 
-                business needs!
-                With the provided plan above,
-                you get my 100% attention if anything occurs,
-                1-10 web pages,
-                with color scheme and anything requested.
-                The website should be delivered ASAP,
-                which can range from 1-5 Business days,
-                depending on requested info. 
-              </p>
-              <hr>
-              <h3 class="text-center">
-                Hosting.
-              </h3>
-              <p class="lead text-center">
-                $0 - Self Hosting. <br>
-                $0 - Webhost. <br>
-                $2.99 - Awardspace. <br>
-                <b>WON'T BUY CUSTOM DOMAINS</b>
-              </p>
-              <hr>
-              <h3 class="text-center">
-                Future Development.
-              </h3>
-              <p>
-                Future development is available for $99. <br>
-                Anything minor (like moving divs and such)
-                is free.
-              </p>
-            </div>
-          </div>
-        </div>
-         
-      </section>
-      </div>
     </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts-->
-    <script src="js/resume.min.js"></script>
-
-  </body>
-
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-12">
+                <p>
+                    If it doesn't work,
+                    then I must have done something wrong.
+                    I'm very sorry,
+                    but it should take you somewhere else that's not here.
+                    Can you please click
+                    <a href="public_html/index.html">
+                    here please?
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+    
+</body>
 </html>
