Add Footer/Small Tweaks

--- a/Version 4/public_html/index.html
+++ b/Version 4/public_html/index.html
@@ -193,5 +193,18 @@
     <script src="js/creative.min.js"></script>
 
   </body>
+  <footer>
+    <div class="container-fluid" id="footer">
+      <div class="row">
+        <div class="container">
+          <div class="col-12">
+            <h4 class="text-center mt-2" id="footerh4">
+              &copy; Brayan Quevedo Ramos 2018
+            </h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 </html>
