Setup Index Done
Evreything that I wanted to be done on the index file is now done. All I have to do is add some modal info and boom onto donations!

--- a/Version 4/public_html/index.html
+++ b/Version 4/public_html/index.html
@@ -118,7 +118,6 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12">
-
             <!--Trigger-->
             <div class="col-12">
               <figure data-toggle="modal" data-target="#exampleModal">
@@ -126,7 +125,6 @@
                 <figcaption>Front-end Development.</figcaption>
               </figure>
             </div>
-
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
@@ -138,7 +136,19 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                  ...
+                  The internet is a rapidly evolving subject.
+                  In a matter of months something can go from new,
+                  to old and outdated.
+                  This does apply to websites.
+                  Having a good developed site might look bad in 
+                  a few months or even a year.
+                  Instead of following website trends for web development,
+                  I focus on themes that are timeless.
+                  By using modern frameworks that work
+                  on a vast amount of devices,
+                  to frameworks that provide a smooth UX
+                  I can deliver the smooth experience that the user expects,
+                  and that you (the company) want!
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn" data-dismiss="modal">Close</button>
@@ -146,6 +156,62 @@
                 </div>
               </div>
             </div><!--End Modal-->
+          </div><!--End Container-->
+          <div class="col-lg-4 col-md-4 col-sm-12">
+            <!--Trigger-->
+            <div class="col-12">
+              <figure data-toggle="modal" data-target="#modal1">
+                <img class="img-fluid col-lg-12" src="img/modalimg2.jpg" alt="UX Developer" />
+                <figcaption>UX Development.</figcaption>
+              </figure>
+            </div>
+            <!--Modal 2-->
+            <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="modal1">UX Developer.</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!--End Container-->
+          <div class="col-lg-4 col-md-4 col-sm-12">
+            <!--Trigger-->
+            <div class="col-12">
+              <figure data-toggle="modal" data-target="#modal2">
+                <img class="img-fluid col-lg-12" src="img/modalimg3.[ng.png" alt="Backend Developer" />
+                <figcaption>Backend Development.</figcaption>
+              </figure>
+            </div>
+            <!--Modal3-->
+            <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="modal2" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="modal2">Backend Developer.</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div><!--End Container-->
         </div><!--Global Settings-->
       </div>
@@ -168,12 +234,22 @@
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
+            <p>(503)-602-1258</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="mailto:brayanuevedo2134@gmail.com">brayanquevedo2134@gmail.com</a>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 mx-auto text-center">
+            <i class="fa fa-instagram fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="https://www.instagram.com/brayan2134/?hl=en">
+              Brayan2134
+              </a>
             </p>
           </div>
         </div>
