--- a/Version 4/public_html/index.html
+++ b/Version 4/public_html/index.html
@@ -176,7 +176,18 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    ...
+                    As a UX Developer,
+                    my job is to make the best looking 
+                    <b>AND</b>
+                    "feeling"
+                    website available!
+                    I add smooth scrolling plugins
+                    to make the user feel really relaxed.
+                    I also attempt to make fast loading pages
+                    so that the user can get the information as fast as possible. <br>
+                    Some tactics I use come from Microsoft.
+                    Pastel Color Schemes/Reverse Colors is what I use,
+                    since the colors usually match together. 
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn" data-dismiss="modal">Close</button>
@@ -204,7 +215,13 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    ...
+                    <b>Note:</b>
+                    I'm only starting to learn backend development so these services
+                    may only improve with time.
+                    My backend is mostly just requests.
+                    Send information to 'x' with validation from 'y'.
+                    In other terms,
+                    I can do forms. 
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn" data-dismiss="modal">Close</button>
