--- a/Version 4/public_html/index.html
+++ b/Version 4/public_html/index.html
@@ -46,16 +46,16 @@
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Pricing</a>
+              <a href="user/info/index.html" class="nav-link">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link" href="user/portfolio/index.html">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Donate</a>
+              <a href="user/donation/index.html" class="nav-link">Donate</a>
             </li>
           </ul>
         </div>
