Setup Donation Index Page

--- a/Version 4/public_html/user/donation/index.html
+++ b/Version 4/public_html/user/donation/index.html
@@ -70,11 +70,42 @@
     <div class="container bg-primary">
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 mx-auto text-center">
-          <h1 class="section-heading mt-3">
+          <h1 class="section-heading mt-5">
             Donate to a cause.
           </h1>
           <hr>
-        </div>   
+        </div>
+      </div><!--End Row-->
+        <div class="row">
+          <div class="col-lg-9 col-md-9 col-sm-12">
+            <p class="text-justify">
+              Hello there!
+              This is the donate section of my website.
+              I know it sounds weird as to why i'm doing this,
+              but this is for my cause - becoming a developer.
+              While I don't need money,
+              this money is for college.
+              I know that college is honestly, really expensive 
+              and not worth it,
+              but I learn best in the classroom. <br>
+            </p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 mb-4 mx-auto">
+            <a href="https://www.paypal.me/BrayanQuevedo">
+              <img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_150x38.png" alt="PayPal" />
+            </a>
+          </div>
+          <div class="col-12 mt-3">
+            <h1 class="text-center">
+              What i'm working towards.
+            </h1>
+            <hr>
+            <p class="text-center">
+              Obviously these goals are for the future,
+              but here's a rough idea of what I want to achieve.
+            </p>
+          </div>
+        </div><!--End Row-->   
       </div>
     </div>
   </div>
