Donation Done/Setup Pricing

--- a/Version 4/public_html/user/donation/index.html
+++ b/Version 4/public_html/user/donation/index.html
@@ -104,6 +104,10 @@
               Obviously these goals are for the future,
               but here's a rough idea of what I want to achieve.
             </p>
+            <h3 class="text-center">
+              - New Laptop (With Core i5 Processor) <br>
+              - Small Second Screen
+            </h3>
           </div>
         </div><!--End Row-->   
       </div>
