--- a/Version 4/public_html/user/info/index.html
+++ b/Version 4/public_html/user/info/index.html
@@ -75,10 +75,18 @@
                 </h1>
                 <hr>
               </div>
-              <!--Personal-->
-              <div class="col-lg-6 col-md-6 col-sm-12">
-                <h3 class="text-center">Personal.</h3>
-                <h1 id="price">$159</h1>
+              <!--Silver Level-->
+              <div class="col-lg-6 col-md-6 col-sm-12" id="silver">
+                <h3 class="text-center mt-4 mb-2" id="silver">Silver</h3>
+                <h1 id="pricesilver">$149</h1>
+                <h3 class="text-center">
+                    - Clean Website <br>
+                </h3>
+              </div>
+              <!--Professional Level-->
+              <div class="col-lg-6 col-md-6 col-sm-12" id="professional">
+                <h3 class="text-center mt-4 mb-2" id="gold">Gold</h3>
+                <h1 id="pricegold">$249</h1>
               </div>
           </div>
       </div>
