Fixed Small Error/FInishing Up Pricing

--- a/Version 4/public_html/user/info/index.html
+++ b/Version 4/public_html/user/info/index.html
@@ -34,10 +34,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="../../index.html">About</a>
+            <a class="nav-link" href="../../index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="../../index.html">Services</a>
+            <a class="nav-link" href="../../index.html">Services</a>
           </li>
           <li class="nav-item">
             <a href="../info/index.html" class="nav-link">Pricing</a>
@@ -46,7 +46,7 @@
             <a class="nav-link" href="../portfolio/index.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="../../index.html">Contact</a>
+            <a class="nav-link" href="../../index.html">Contact</a>
           </li>
           <li class="nav-item">
             <a href="index.html" class="nav-link">Donate</a>
@@ -67,34 +67,55 @@
   </header>
 
   <section class="price" id="price">
-      <div class="container">
-          <div class="row">
-              <div class="col-12">
-                <h1 class="text-center">
-                    Current Pricing.
-                </h1>
-                <hr>
-              </div>
-              <!--Silver Level-->
-              <div class="col-lg-6 col-md-6 col-sm-12" id="silver">
-                <h3 class="text-center mt-4 mb-2" id="silver">Silver</h3>
-                <h1 id="pricesilver">$149</h1>
-                <h3 class="text-center">
-                    - Clean Website <br>
-                </h3>
-              </div>
-              <!--Professional Level-->
-              <div class="col-lg-6 col-md-6 col-sm-12" id="professional">
-                <h3 class="text-center mt-4 mb-2" id="gold">Gold</h3>
-                <h1 id="pricegold">$249</h1>
-              </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="text-center">
+            Current Pricing.
+          </h1>
+          <hr>
+        </div>
+        <!--Silver Level-->
+        <div class="col-lg-6 col-md-6 col-sm-12" id="silver">
+          <h3 class="text-center mt-4 mb-2" id="silver">Silver</h3>
+          <h1 id="pricesilver">$149</h1>
+          <div class="col-12">
+            <h4 class="mx-auto">
+              - Mobile-Optimized Website <br>
+              - Website Metrics <br>
+              - 24/7 Customer Support
+            </h4>
           </div>
+        </div>
+        <!--Professional Level-->
+        <div class="col-lg-6 col-md-6 col-sm-12" id="professional">
+          <h3 class="text-center mt-4 mb-2" id="gold">Gold</h3>
+          <h1 id="pricegold">$249</h1>
+          <div class="col-12">
+            <h4 class="mx-auto" id="gold">
+              - Mobile-Optimized Website <br> 
+              - <b>Advanced</b> Website Metrics  <br>
+              - 24/7 Customer Support <br>
+              - Promotional Pop-Ups <br>
+              - Premium Design <br>
+              - Information Bar <br>
+              - Complete Manual Customization <br>
+            </h4>
+            <h4 class="text-center" id="white">
+              Other Features.
+            </h4>
+            <h4 class="mx-auto" id="white">
+              - Free Hosting <br>
+            </h4>
+          </div>
+        </div>
       </div>
+    </div>
   </section>
 
   <!-- Bootstrap core JavaScript -->
   <script src="../../vendor/jquery/jquery.min.js"></script>
-  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     
   <!-- Plugin JavaScript -->
   <script src="../../vendor/jquery-easing/jquery.easing.min.js"></script>
