Pricing Info Mostly Done

--- a/Version 4/public_html/user/info/index.html
+++ b/Version 4/public_html/user/info/index.html
@@ -102,16 +102,58 @@
               - Complete Manual Customization <br>
             </h4>
             <h4 class="text-center" id="white">
-              Other Features.
+              <span id="gold">Gold</span>
+              Only Features.
             </h4>
             <h4 class="mx-auto" id="white">
               - Free Hosting <br>
+              - Get Website/Business On Google <br>
+              - Redesign Website At A
+              <span id="gold"><b>Reduced</b></span> Price <br>
             </h4>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <section class="bg-primary" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Have Questions, Or Want To Hire Me?</h2>
+            <hr class="my-4">
+            <p class="mb-5">
+              Contact me below using any of the methods below!
+              I'm open to most requests and i'll be more 
+              than happy to help you out!
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+            <p>(503)-602-1258</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="mailto:brayanuevedo2134@gmail.com">brayanquevedo2134@gmail.com</a>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 mx-auto text-center">
+            <i class="fa fa-instagram fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="https://www.instagram.com/brayan2134/?hl=en">
+              Brayan2134
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!-- Bootstrap core JavaScript -->
   <script src="../../vendor/jquery/jquery.min.js"></script>
