--- a/Version 4/public_html/index.html
+++ b/Version 4/public_html/index.html
@@ -241,7 +241,7 @@
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
             <p class="mb-5">
-              Ready to start your next project with us? 
+              Ready to start your next project with me? 
               That's great! 
               Send me a text or  an email and I
               will get back to you as soon as possible!
