Setup Last Section - Portfolio/Finish&Fix Small Errors

--- a/Version 4/public_html/user/donation/index.html
+++ b/Version 4/public_html/user/donation/index.html
@@ -79,35 +79,18 @@
         <div class="row">
           <div class="col-lg-9 col-md-9 col-sm-12">
             <p class="text-justify">
-              Hello there!
-              This is the donate section of my website.
-              I know it sounds weird as to why i'm doing this,
-              but this is for my cause - becoming a developer.
-              While I don't need money,
-              this money is for college.
-              I know that college is honestly, really expensive 
-              and not worth it,
-              but I learn best in the classroom. <br>
+              Hello and welcome to this section of the website!
+              Do you want to help me progress further 
+              in my journey to become a developer?
+              Please consider donating,
+              as it will let me become less financially cautious and 
+              make better websites, faster!
             </p>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-12 mb-4 mx-auto">
             <a href="https://www.paypal.me/BrayanQuevedo">
               <img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_150x38.png" alt="PayPal" />
             </a>
-          </div>
-          <div class="col-12 mt-3">
-            <h1 class="text-center">
-              What i'm working towards.
-            </h1>
-            <hr>
-            <p class="text-center">
-              Obviously these goals are for the future,
-              but here's a rough idea of what I want to achieve.
-            </p>
-            <h3 class="text-center">
-              - New Laptop (With Core i5 Processor) <br>
-              - Small Second Screen
-            </h3>
           </div>
         </div><!--End Row-->   
       </div>
