--- a/Version 4/public_html/user/info/index.html
+++ b/Version 4/public_html/user/info/index.html
@@ -110,6 +110,7 @@
               - Get Website/Business On Google <br>
               - Redesign Website At A
               <span id="gold"><b>Reduced</b></span> Price <br>
+              - <span id="gold">5 Day Delivery Guarantee</span>
             </h4>
           </div>
         </div>
