--- a/Version 4/public_html/user/portfolio/index.html
+++ b/Version 4/public_html/user/portfolio/index.html
@@ -43,13 +43,13 @@
             <a href="../info/index.html" class="nav-link">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../portfolio/index.html">Portfolio</a>
+            <a class="nav-link" href="index.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../../index.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Donate</a>
+            <a href="../donation/index.html" class="nav-link">Donate</a>
           </li>
         </ul>
       </div>
@@ -65,6 +65,10 @@
       </div>
     </div>
   </header>
+
+  <section class="portfolio" id="portfolio">
+
+  </section>
 
   <!-- Bootstrap core JavaScript -->
   <script src="../../vendor/jquery/jquery.min.js"></script>
